--- a/Solver/Makefile
+++ b/Solver/Makefile
@@ -1,12 +1,12 @@
 executables = solver
-objectFiles = main.o GameBoard.o
+objectFiles = main.o GameBoard.o PossibilitiesBoard.o Solver.o
 
 all: ${executables}
 
 solver: ${objectFiles}
 	g++ -o solver ${objectFiles}
 
-%.o: %.cpp
+%.o: %.cpp %.hpp
 	g++ -c $^
 
 # Czyszczenie
