src and bin folder division

--- a/Solver/Makefile
+++ b/Solver/Makefile
@@ -1,22 +1,29 @@
+BIN = ./bin/
+SRC = ./src/
+
 executables = solver generator
-commonObjectFiles = GameBoard.o PossibilitiesBoard.o Solver.o Statistics.o
+commonObjectFiles = GameBoard.o PossibilitiesBoard.o Solver.o Statistics.o SolverPolynomial.o
 solverObjectFiles = ${commonObjectFiles} mainS.o
 generatorObjectFiles = ${commonObjectFiles} Generator.o mainG.o
 
+solverBin = $(addprefix $(BIN), $(solverObjectFiles))
+generatorBin = $(addprefix $(BIN), $(generatorObjectFiles))
+
+
 all: ${executables}
 
-solver: ${solverObjectFiles}
-	g++ -o solver ${solverObjectFiles}
+solver: ${solverBin}
+	g++ -o solver ${solverBin}
 
-generator: ${generatorObjectFiles}
-	g++ -o generator ${generatorObjectFiles}
+generator: ${generatorBin}
+	g++ -o generator ${generatorBin}
 
-%.o: %.cpp GameBoard.hpp
-	g++ -c $^
+$(BIN)%.o: $(SRC)%.cpp
+	g++ -o $@ -c $^
 
 # Czyszczenie
 exe: ${executables}
-	rm -f *.o *.~
+	rm -f $(BIN)* $(SRC)*.gch
 
 clean:
-	rm -f *.o *.~ *.gch ${executables}
+	rm -f $(BIN)* $(SRC)*.gch ${executables}
